fixed center alignment issue of Header

--- a/packages/moonstone/Panels/Header.module.less
+++ b/packages/moonstone/Panels/Header.module.less
@@ -155,6 +155,12 @@
 		.padding-start-end(0, var(--moon-panels-controls-width));
 	}
 
+	.header.centered.compact,
+	.header.centered.standard .title,
+	.header.centered.standard .headerInput {
+		.padding-start-end(var(--moon-panels-controls-width), var(--moon-panels-controls-width));
+	}
+
 	.header.compact {
 		.headerComponents {
 			border-right-width: @moon-header-controls-border-width;
